src/App.css
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans');

@import url('https://fonts.googleapis.com/icon?family=Material+Icons');

* {
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
  max-width: 1400px;
}

.selected {
  color: white;
  background: navy;
}

nav button {
  font-weight: bold;
}

nav {
  position: fixed;
  height: 100vh;
  overflow: auto;
  top: 0;
  width: 14em;
  margin-right: 1em;
  padding: 0.5em;
  background: #eee;
  border: 1px solid #ddd;
  z-index: 999;  /* prevent position: sticky from covering navigation */
}

nav button {
  display: block;
  width: calc(100% - 2em);
  text-align: left;
}

nav span button {
  margin-left: 1.5em;
}

.size {
  font-size: 24px;
}

div.table {
  display: table;
}

div.table > div:not(.caption) {
  display: table-row;
}

div.table > div > * {
  display: table-cell;
}

div.caption {
  display: table-caption;
  text-align: center;
}

.th, th {
  text-align: center;
  background: #eee;
}

table {
  border: 1px solid black;
  border-spacing: 0; 
  empty-cells: show;
}

td, th {
  padding: 0.2em 0.5em;
  border-right: 1px solid #ddd;
  border-bottom: 1px solid #bbb;
}

.Total {
  font-weight: bold;
}

label {
  cursor: pointer;
}

#Breakdown.noImplementCost tr > :nth-child(2),
#Breakdown.noPowerCost tr > :nth-child(3),
#Breakdown.noImplementCost.noPowerCost tr > :nth-child(4) {
  background: #ddd;
  color: #888;
}

#Activity td:nth-child(n + 2) {
  width: 15em !important;
  text-align: left !important;
}

#Activity th, #Costs th {
  text-align: center;
}

#Activity tr > :nth-child(2n + 2) {
  border-left: 1px solid black;
}

#Activity td:nth-child(n + 2),
#Costs td:nth-child(n + 2) {
  text-align: right;
}

#Costs tr > :nth-child(4n + 2) {
  border-left: 1px solid black;
}

.hidden {
  display: none;
}

#Activity.seedbed tr > :nth-child(1):not(.hidden),
#Activity.seedbed tr > :nth-child(2):not(.hidden),
#Activity.seedbed tr > :nth-child(3):not(.hidden) {
  display: table-cell;
}

#Activity.planting tr > :nth-child(1):not(.hidden),
#Activity.planting tr > :nth-child(4):not(.hidden),
#Activity.planting tr > :nth-child(5):not(.hidden) {
  display: table-cell;
}

#Costs.seedbed tr > :nth-child(1):not(.hidden),
#Costs.seedbed tr > :nth-child(2):not(.hidden),
#Costs.seedbed tr > :nth-child(3):not(.hidden),
#Costs.seedbed tr > :nth-child(4):not(.hidden),
#Costs.seedbed tr > :nth-child(5):not(.hidden) {
  display: table-cell;
}

#Costs.planting tr > :nth-child(1):not(.hidden),
#Costs.planting tr > :nth-child(6):not(.hidden),
#Costs.planting tr > :nth-child(7):not(.hidden),
#Costs.planting tr > :nth-child(8):not(.hidden),
#Costs.planting tr > :nth-child(9):not(.hidden) {
  display: table-cell;
}

#Activity tr > :nth-child(1),
#Costs    tr > :nth-child(1) {
  width: 10em;
}

#Activity tr > :nth-child(n + 2) {
  width: calc(12em + 2px);
}

#Costs tr > :nth-child(n + 2) {
  width: 6em;
}

li.selected {
  font-weight: bold;
  color: #246;
  background: #ccc;
}

form.Species td:nth-child(1) {
  width: 18rem;
}

form.Species td:nth-child(n + 2) {
  text-align: right;
  width: 8em;
}

form.Species th {
  background: #eee;
}

form.Species tr:not(:last-child) td:nth-child(n + 2) {
  background: #efe;
}

zdiv.Species tr > :nth-child(n + 4) {
  display: none;
}

form.Species tr:last-child td {
  border-top: 1px solid #666;
  background: #eee;
}

form.Species tr > :nth-child(4) {
  border-left: 1px solid black;
}

form.Species tr > td:nth-child(1),
form.Species tr > td:nth-child(2),
form.Species tr > td:nth-child(3) {
  border-bottom: none;
}

[inputmode="numeric"] {
  border: none;
  font-size: 110%;
  border-bottom: 1px solid silver;
  background: transparent !important;
  text-align: right;
  max-width: 8em;
  outline: none;
}

[inputmode="numeric"]:focus {
  transition: all 0.2s;
  border-bottom: 2px solid navy;
}

.MuiListSubheader-root {
  background: #246 !important;
  color: #eca !important;
  font-style: italic;
  border-top: 1px solid #aaa;
  border-bottom: 1px solid #aaa;
  line-height: 1.5em !important;
}

.MuiButton-label {
  text-transform: none;
}

div.navigation {
  text-align: center;
  margin: 1rem 0;
}

div.navigation button {
  margin-right: 2rem
}

[data-scr=Home], [data-scr=Resources] {
  padding-left: 0 !important;
  font-weight: bold !important;
}

nav strong, [data-scr=Resources] {
  display: block;
  border-top: 1px solid #bbb !important;
  padding-top: 0.5em;
}

#Summary {
  position: fixed;
  top: 0.5rem;
  right: 1rem;
  font-size: 0.8rem;
}

#Summary thead {
  background: #eee;
}

#Summary tfoot {
  background: yellow
}

#Summary tr > :nth-child(2) {
  text-align: right;
}

.Field tr {
  vertical-align: top;
}

.Field td {
  height: 5em;
}

.Field tr:last-child td {
  height: auto;
}

.Field td {
  width: 50%;
}

.Field td:nth-child(1) {
  border-right: 2px solid black;
  background: #f8f8f8;
}

.Field td:nth-child(2) {
  border-right: 2px solid black;
  background: #f0f4fc;
}

.MuiSelect-root * {
  width: 100% !important;
  display: none !important;
}

.fullWidth {
  width: calc(100vw - 16em);
}

table.seedbed td:nth-child(1),
table.planting td:nth-child(1) {
  width: 30rem;
}

table.seedbed td:nth-child(2),
table.planting td:nth-child(2) {
  width: 30rem;
}

tr.seedbedTotal, tr.plantingTotal, .total {
  background: yellow;
}

input[type="number"]::-webkit-outer-spin-button, 
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

.inputs {
  width: 100% !important;
  max-width: 1000px;
}

.inputs td:nth-child(1) {
  width: 50%;
}

/*
#Main > * {
  display: none;
}

#Main.Home > .Home, 
#Main.Field > .Field,
#Main.Species > .Species,
#Main.Resources > .Resources {
  display: block !important;
}
*/

.MuiAutocomplete-inputRoot {
  padding: 0 !important;
}

.MuiAutocomplete-inputRoot > * {
  zpadding: 0.3rem !important;
}

.Field h2 {
  font-size: 100%;
  margin-bottom: 0.3rem;
  margin-top: 0.8rem;
}

.airtable table {
  width: 0;
}

.airtable td, .airtable th {
  padding: 0;
  border: 1px solid #ddd;
  height: 1.8rem;
  white-space: nowrap;
  font: 14px arial;
}

.airtable th {
  padding: 0.3rem;
}

.airtable td:nth-child(1) {
  padding: 0.3rem;
  background: #f8f8f8;
}

.airtable td > * {
  padding: 0.5rem;
}

.airtable input {
  position: absolute;
  top: 0;
  height: 100%;
  display: block;
  width: 100%;
  border: none;
  font: 14px arial;
}

.airtable td {
  position: relative;
  width: 500px !important;
}

.airtable span {
  visibility: hidden;  /* ensure widths match inputs */
}

.airtable :focus {
  background: yellow;
}

.airtable th {
  position: sticky;
  top: 0;
  border-bottom: 1px solid #333;
  z-index: 998;
}

.loading {
  margin: 0.5rem;
  color: #aaa;
}

